name:               github-api
version:            1.0
build-type:         Simple
cabal-version:      >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/github-api

library
  exposed-modules:
      GitHub.App
  other-modules:
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , aeson   
    , bytestring
    , crypto-pubkey-types
    , data-default-class
    , github
    , jwt 
    , microlens-platform
    , req 
    , time 
    , universum 

  default-language: Haskell2010
  
  default-extensions:  DeriveGeneric
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
